--- a/style/main.css
+++ b/style/main.css
@@ -66,6 +66,8 @@ img {
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
+    background-color: navy;
+
 }
 
 
@@ -73,6 +75,8 @@ header {
 main {
     display: flex;
     flex: 1 0 auto;
+    background-color: lightblue;
+
 }
 main > div.container {
     flex: 1 0 auto;
@@ -88,4 +92,7 @@ aside {
 /* Подвал сайта */
 footer {
     flex: 0 0 auto;
+    background-color: navy;
+
 }
+
