--- a/style/main.css
+++ b/style/main.css
@@ -66,7 +66,7 @@ img {
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
-    background-color: navy;
+    background-color: darkslategray;
 
 }
 
@@ -75,11 +75,13 @@ header {
 main {
     display: flex;
     flex: 1 0 auto;
-    background-color: lightblue;
+    background-color: lightgray;
 
 }
 main > div.container {
     flex: 1 0 auto;
+    background-color: white;
+
 }
 section {
 
@@ -92,7 +94,7 @@ aside {
 /* Подвал сайта */
 footer {
     flex: 0 0 auto;
-    background-color: navy;
+    background-color: darkslateblue;
 
 }
 
