--- a/style/main.css
+++ b/style/main.css
@@ -69,6 +69,10 @@ header {
     background-color: #000;
     height: 100px;
 }
+header > div.container {
+    height: 100%;
+    align-items: center;
+}
 
 
 /* Основное содержимое */
@@ -93,7 +97,7 @@ aside {
 /* Подвал сайта */
 footer {
     flex: 0 0 auto;
-    background-color: navy;
+    background-color: #000;
     height: 200px;
 }
 
