--- a/style/main.css
+++ b/style/main.css
@@ -68,6 +68,7 @@ header {
     flex: 0 0 auto;
     background-color: #000;
     height: 100px;
+    color: #fff;
 }
 header > div.container {
     height: 100%;
