--- a/style/main.css
+++ b/style/main.css
@@ -100,5 +100,8 @@ footer {
     flex: 0 0 auto;
     background-color: #000;
     height: 200px;
+    color: #fff;
+    height: 100%;
+    align-items: center;
 }
 
