--- a/style/main.css
+++ b/style/main.css
@@ -101,7 +101,7 @@ footer {
     background-color: #000;
     height: 200px;
     color: #fff;
-    height: 100%;
-    align-items: center;
 }
-
+footer > div.container {
+        height: 100%;
+}
