--- a/style/main.css
+++ b/style/main.css
@@ -92,7 +92,7 @@ section {
     padding: 0 15px;
 }
 aside {
-    flex: 1 0 auto
+    flex: 1 0 auto /* 1 - это ширина столбца */
     padding: 0 15px;
 }
 
@@ -105,6 +105,11 @@ footer {
     color: #fff;
 }
 footer > div.container {
-        height: 100%;
-        padding: 10px 0;
+    height: 100%;
+    padding: 10px 0;
 }
+
+footer nav ul {
+    margin-right: 30px;
+}
+
