--- a/style/main.css
+++ b/style/main.css
@@ -74,14 +74,15 @@ header > div.container {
     height: 100%;
     align-items: center;
 }
-
+header ul li {
+    margin-right: 20px;
+}
 
 /* Основное содержимое */
 main {
     display: flex;
     flex: 1 0 auto;
     background-color: lightgray;
-
 }
 main > div.container {
     flex: 1 0 auto;
@@ -108,7 +109,6 @@ footer > div.container {
     height: 100%;
     padding: 10px 0;
 }
-
 footer nav ul {
     margin-right: 30px;
 }
