--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@ body {
 .container {
     display: flex;
     width: 100%;
-    max-width: 1200px; /*максимальная ширина может иметь другое значение*/
+    max-width: 1024px; /*максимальная ширина может иметь другое значение*/
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -91,7 +91,7 @@ main {
     display: flex;
     flex: 1 0 auto;
     background-color: #e5e5e5;
-    background-image: url(/hohlova/images/fon.jpg);
+    background-image: url(/hohlova/images/background.jpg);
     background-position: center center;
     background-size: cover;
 }
