--- a/style/main.css
+++ b/style/main.css
@@ -11,13 +11,37 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    font-size: 14px;
 }
 .container {
     display: flex;
     width: 100%;
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
-    padding: 0 15px;
     margin: 0 auto;
+}
+h1 {
+    font-size: 2.4em;
+    padding: .8em 0 1.2em 0;
+}
+h2 {
+    font-size: 2.2em;
+    padding: .6em 0 1.0em 0;
+}
+h3 {
+    font-size: 2.0em;
+    padding: .4em 0 .8em 0;
+}
+h4 {
+    font-size: 1.8em;
+    padding: .2em 0 .6em 0;
+}
+h5 {
+    font-size: 1.6em;
+    padding: .8em 0 1.2em 0;
+}
+h6 {
+    font-size: 1.4em;
+    padding: .8em 0 1.2em 0;
 }
 
 
@@ -34,6 +58,12 @@ nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+.b-right {
+    border-right: 1px solid #e5e5e5;
+    border-left: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 
@@ -64,11 +94,19 @@ img {
 }
 
 button {
-    height: 50px;
-    /*width: 100px;*/
-    background-color: #999;
+    background-color: #666;
     border-radius: 5px;
+    padding: 20px 30px;
+    margin: 10px 20px;
+    text-decoration: none !important;
 }
+
+.button:hover {
+    background-color: #888;
+
+}
+
+
 
 /* Шапка сайта */
 header {
@@ -97,7 +135,7 @@ main {
 }
 main > div.container {
     flex: 1 0 auto;
-    background-color: white;
+    background-color: #fff;
 }
 section {
     flex: 3 0 auto; /* 3 - это ширина столбца */
