--- a/style/main.css
+++ b/style/main.css
@@ -62,8 +62,8 @@ nav ul {
 .b-right {
     border-right: 1px solid #e5e5e5;
     border-left: 1px solid #e5e5e5;
-    border-top: 1px solid #e5e5e5;
-    border-bottom: 1px solid #e5e5e5;
+    border-top: 1px dotted #e5e5e5;
+    border-bottom: 1px dotted #e5e5e5;
 }
 
 
@@ -122,6 +122,10 @@ header > div.container {
 header ul li {
     margin-right: 20px;
 }
+header .logo {
+ width: 100px;
+
+}
 
 
 /* Основное содержимое */
@@ -145,6 +149,20 @@ aside {
     flex: 1 0 auto /* 1 - это ширина столбца */
     padding: 0 15px;
 }
+aside a {
+ color: #000;
+
+ text-decoration: none;
+
+}
+aside a:hover {
+ text-decoration: undeline;
+
+}
+aside li {
+ line-height: 1.5em;
+
+}
 
 
 /* Подвал сайта */
@@ -161,7 +179,10 @@ footer > div.container {
 footer nav ul {
     margin-right: 30px;
 }
+footer li {
+line-height: 2em;
 
+}
 
 
 header a,
