--- a/style/main.css
+++ b/style/main.css
@@ -53,7 +53,7 @@ h6 {
 .column {
     display: flex;
     flex-direction: column;
-    font-size: 1.4em;
+    size: 10px;
 }
 nav ul {
     margin: 0;
