--- a/style/main.css
+++ b/style/main.css
@@ -53,7 +53,7 @@ h6 {
 .column {
     display: flex;
     flex-direction: column;
-    size: 10px;
+    size: 10%;
 }
 nav ul {
     margin: 0;
@@ -130,8 +130,7 @@ header ul li {
     margin-right: 20px;
 }
 header .logo {
- width: 100px;
-
+ width: 10%;
 }
 
 
