--- a/style/main.css
+++ b/style/main.css
@@ -53,7 +53,7 @@ h6 {
 .column {
     display: flex;
     flex-direction: column;
-    size: 100%;
+    size: 100px;
 }
 nav ul {
     margin: 0;
@@ -130,7 +130,7 @@ header ul li {
     margin-right: 20px;
 }
 header .logo {
- width: 50%;
+ width: 50px;
 }
 
 
