--- a/style/main.css
+++ b/style/main.css
@@ -178,7 +178,7 @@ aside li {
 footer {
     flex: 0 0 auto;
     background-color: #000;
-    height: 200px;
+    /*height: 200px;*/
     color: #fff;
 }
 footer > div.container {
@@ -189,7 +189,7 @@ footer nav ul {
     margin-right: 30px;
 }
 footer li {
-line-height: 2em;
+    line-height: 2em;
 
 }
 
