--- a/style/main.css
+++ b/style/main.css
@@ -19,7 +19,7 @@ body {
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
     margin: 0 auto;
 }
-button {
+.button {
     background-color: #666;
     border-radius: 5px;
     padding: 20px 30px;
@@ -65,7 +65,6 @@ h6 {
 .column {
     display: flex;
     flex-direction: column;
-    size: 100px;
 }
 nav ul {
     margin: 0;
@@ -159,7 +158,7 @@ aside {
     float: right;
 }
 aside a {
- color: #000;
+ color: black;
  text-decoration: none;
 }
 aside a:hover {
