--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     width: 100%;
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
+    padding: 0 15px;
     margin: 0 auto;
 }
 .button {
