--- a/style/main.css
+++ b/style/main.css
@@ -28,8 +28,7 @@ body {
 }
 
 .button:hover {
-    background-color: aquamarine;
-
+    background-color: salmon;
 }
 h1 {
     font-size: 2.4em;
@@ -62,13 +61,13 @@ h6 {
     display: flex;
     flex-direction: row;
     font-size: 16px;
-    font-family: cursive;
+    font-family: monospace;
 }
 .column {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    font-family: cursive;
+    font-family: monospace;
 }
 nav ul {
     margin: 0;
