--- a/style/space.css
+++ b/style/space.css
@@ -3,7 +3,6 @@
 @import url("https://marksheet.io/css/reset.css");
 
 
-
 /* Базовые стили */
 html {
     height: 100%;
@@ -43,6 +42,10 @@ img {
     width: 100%;
     max-width: 100%;
 }
+img.logo {
+    width: 60px;
+    height: 60px;
+}
 .col-1 {
     flex: 1;
 }
@@ -64,7 +67,7 @@ img {
 @media (max-width: 800px) {
     .container {
         flex-direction: column;
-   }
+    }
 }
 
 
@@ -74,13 +77,23 @@ header {
     background-color: #212426;
     height: 100px;
 }
-.contacts-menu .icon-mail {
-    background-image: url(hohlova/images/mail-icon.png);
-    background-position: right right;
+header > div.container {
+    height: 100%;
+    align-items: center;
 }
-.contacts-menu .icon-phone {
+header ul li {
+    margin-right: 20px;
+}
+header.logo {
+    width: 50px;
+}
+.icon-mail {
+    background-image: url(hohlova/images/mail-icon.png);
+    background-position: center right;
+}
+.icon-phone {
     background-image: url(hohlova/images/phone-icon.png);
-    background-position: right right;
+    background-position: center right;
 }
 
 /* Основное содержимое */
