--- a/style/space.css
+++ b/style/space.css
@@ -87,7 +87,7 @@ header ul li {
 header.logo {
     width: 50px;
 }
-.icon-mail {
+icon-mail {
     background-image: url(hohlova/images/mail-icon.png);
     background-position: center right;
 }
