--- a/style/space.css
+++ b/style/space.css
@@ -91,7 +91,7 @@ icon-mail {
     background-image: url(hohlova/images/mail-icon.png);
     background-position: center right;
 }
-.icon-phone {
+icon-phone {
     background-image: url(hohlova/images/phone-icon.png);
     background-position: center right;
 }
