--- a/style/space.css
+++ b/style/space.css
@@ -90,10 +90,14 @@ header.logo {
 icon-mail {
     background-image: url(hohlova/images/mail-icon.png);
     background-position: center right;
+    width: 17px;
+    height: 12px;
 }
 icon-phone {
     background-image: url(hohlova/images/phone-icon.png);
     background-position: center right;
+    width: 17px;
+    height: 17px;
 }
 
 /* Основное содержимое */
