--- a/style/space.css
+++ b/style/space.css
@@ -25,7 +25,7 @@ body {
 .row {
     display: flex;
     flex-direction: row;
-    text-decoration-color: gray;
+    background-color: gray;
 }
 .column {
     display: flex;
@@ -43,7 +43,15 @@ img {
     width: 100%;
     max-width: 100%;
 }
-img.logo {
+.icon-mail {
+    background-image: url(hohlova/images/mail-icon.png);
+    background-position: center right;
+}
+.icon-phone {
+    background-image: url(hohlova/images/phone-icon.png);
+    background-position: center right;
+}
+.logo {
     width: 60px;
     height: 60px;
 }
@@ -88,14 +96,7 @@ header ul li {
 header.logo {
     width: 50px;
 }
-icon-mail {
-    background-image: url(hohlova/images/mail-icon.png);
-    background-position: center right;
-}
-icon-phone {
-    background-image: url(hohlova/images/phone-icon.png);
-    background-position: center right;
-}
+
 
 /* Основное содержимое */
 main {
