--- a/style/space.css
+++ b/style/space.css
@@ -87,6 +87,7 @@ img {
 header {
     flex: 0 0 auto;
     height: 100px;
+    background-color: #222222;
 }
 header > div.container {
     height: 100%;
