--- a/style/space.css
+++ b/style/space.css
@@ -16,10 +16,22 @@ body {
     display: flex;
     width: 100%;
     max-width: 1200px; /*максимальная ширина может иметь другое значение*/
-    padding: 0 15px;
+    padding: 0;
     margin: 0 auto;
 }
-
+.button {
+    width: 195px;
+    padding: 0 25px;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 50px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: #feca30;
+}
+.button:hover {
+    background-color: white;
+}
 
 /* Предустановки */
 .row {
@@ -44,7 +56,7 @@ img {
 }
 .mail {
     background-image: url(hohlova/images/mail-icon.png);
-    position: right right;
+    position: center center;
     width: 17px;
     height: 12px;
 }
@@ -57,6 +69,18 @@ img {
 .logo {
     width: 60px;
     height: 60px;
+}
+.rocket {
+    background-image: url(hohlova/images/moon-rocket.png);
+    position: center center;
+    width: 438px;
+    height: 438px;
+}
+.arrow {
+    background-image: url(hohlova/images/right-arrow-dark.png);
+    position: fixed;
+    width: 19px;
+    height: 16px;
 }
 .col-1 {
     flex: 1;
@@ -89,7 +113,6 @@ header {
     height: 100px;
     background: #222222;
     background-position: 520px 130px;
-    background-image: url(hohlova/images/moon-rocket.png);
     min-height: 400px;
     padding-top: 50px;
     padding-bottom: 180px;
@@ -107,9 +130,7 @@ header ul li {
 main {
     display: flex;
     flex: 1 0 auto;
-/*    background-color: #222222;*/
     height: 200px;
-/*    color: #222222;*/
 }
 section {
     flex: 3 0 auto; /* 3 - это ширина столбца */
@@ -122,7 +143,10 @@ section {
 }
 .advantages {
     font-family: monospace;
-    background-color: black;
+    padding: 85px 0;
+    background-color: #131313;
+    color: #ffffff;
+
 }
 aside {
     flex: 1 0 auto; /* 1 - это ширина столбца */
