--- a/style/space.css
+++ b/style/space.css
@@ -112,7 +112,7 @@ img {
     height: 16px;
 }
 .advantage {
-    background-image: url(hohlova/images/advantage-ico n-1.png);
+    background-image: url(hohlova/images/advantage-icon-1.png);
     position: fixed;
 /*
     padding-right: 150px;
