--- a/style/space.css
+++ b/style/space.css
@@ -11,52 +11,14 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    line-height: 20px;
-    font-family: sans-serif;
+    font-size: 12px;
+    font-family: Verdana, sans-serif;
 }
 .container {
     display: flex;
     width: 100%;
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
-    padding: 0;
-/*    margin: 0 auto;*/
-    margin-bottom: 80px;
-}
-.button {
-    width: 195px;
-    padding: 0 25px;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 50px;
-    text-decoration: none;
-    background-color: #feca30;
-    color: black;
-}
-.button:hover {
-    background-color: white;
-}
-h1 {
-/*
-    margin: 0;
-    padding: 0;
-*/
-    font-size: 45px;
-    line-height: 50px;
-    font-family: "Courier New", monospace;
-    color: white;
-    padding-bottom: 50px;
-}
-pre {
-    line-height: 22px;
-    color: #d4d4d4;
-    font-size: 16px;
-    padding-bottom: 50px;
-}
-p {
-    line-height: 22px;
-    color: #d4d4d4;
-    font-size: 16px;
-    padding-bottom: 50px;
+    margin: 0 auto;
 }
 
 
@@ -84,49 +46,51 @@ strong {
     width: 100%;
     margin: 0 auto;
 }
-
-/* Гибкая верстка */
-.mail {
-    background-image: url(hohlova/images/mail-icon.png);
-    position: center center;
-    width: 17px;
-    height: 12px;
+btn {
+    position: relative;
+    display: flex;
+    width: 195px;
+    padding: 0 25px;
+    font-family: Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+    line-height: 50px;
+    text-decoration: none;
+    text-transform: uppercase;
+    vertical-align: top;
+    color: #222222;
+    border-radius: 50px;
 }
-.phone {
-    background-image: url(hohlova/images/phone-icon.png);
-    position: center center;
-    width: 17px;
-    height: 17px;
-}
-.logo {
-    width: 60px;
-    height: 60px;
-}
-.rocket {
-    background-image: url(hohlova/images/moon-rocket.png);
-    position: center center;
-    width: 440px;
-    height: 440px;
-}
-.arrow {
-    background-image: url(hohlova/images/right-arrow-dark.png);
-    position: fixed;
+.btn::after {
+    content: "";
+    position: absolute;
+    right: 20px;
+    top: 17px;
     width: 19px;
     height: 16px;
+    background-image: url(hohlova/images/right-arrow-dark.png);
+    background-repeat: no-repeat;
+    background-position: 0 0;
 }
-.advantage {
-    background-image: url(hohlova/images/advantage-icon-1.png);
-    background-image: url(hohlova/images/advantage-icon-2.png);
-    background-image: url(hohlova/images/advantage-icon-3.png);
-    background-image: url(hohlova/images/advantage-icon-4.png);
-/*  position: fixed;
-    padding-right: 150px;
-    padding-left: 50px;
-*/
-    width: 60px;
-    height: 68px;
-    margin-right: 80px;
+.btn-yellow {
+    background-color: #feca30;
 }
+.btn-yellow:hover {
+    background-color: #fff;
+}
+.btn-grey {
+    width: 215px;
+    color: #fff;
+    background-color: #222;
+}
+.btn-grey::after { background-image: url(hohlova/images/right-arrow-white.png);
+}
+.btn-grey:hover {
+    background-color: #676767;
+}
+
+
+/* Гибкая верстка */
 .col-1 {
     flex: 1;
 }
@@ -158,15 +122,10 @@ header {
     height: 75%;
     background-color: #222222;
     font-size: 0.9em;
-/*
-    padding: 75px;
-    padding-bottom: 54%;
-*/
 }
 header > div.container {
     height: 100%; /*было 90*/
     align-items: flex-end;
-/*    margin-bottom: 120px;*/
 }
 header ul {
     display: flex;
@@ -201,27 +160,102 @@ section {
     flex: 3 0 auto; /* 3 - это ширина столбца */
     padding: 0 90px;
 }
-.content {
-    flex: 1 0 auto;
-}
 .moon {
     flex: 1 0 auto;
-    font-family: monospace;
+    flex-wrap: wrap;
     background-color: #222222;
+    padding: 30px 0;
 }
+.moon-header {
+    width: 300px;
+    margin: 0 5vw;
+    padding: 60px 0;
+}
+.moon h1 {
+    margin: 40px 0;
+    font-family: Courier new, monospace;
+    font-weight: bold;
+    font-size: 3.2em;
+    line-height: 50px;
+    color: #fff;
+}
+.moon p {
+    margin-bottom: 50px;
+    padding-left: 5px;
+    line-height: 22px;
+    color: #d4d4d4;
+    font-size: 1.1em;
+}
+.moon img {
+    width: 100%;
+    max-width: 438px;
+    margin: 30px 0;
+}
+
 .advantages {
     flex: 1 0 auto;
     font-family: monospace;
-    padding: 85px 0;
+    padding: 55px 0 85px 0;
     background-color: #131313;
     color: #ffffff;
 }
-advantages ul li {
-    width: 180px;
-    font-size: 14px;
-    line-height: 20px;
-    color: #d4d4d4;
+.advantages div {
+    justify-content: space-around;
 }
+.advantages .block-item {
+    max-width: 200px;
+}
+.advantages img {
+    padding: 30px 0;
+}
+
+.content {
+    flex: 1 0 auto;
+    padding: 55px 0;
+}
+.content div {
+    justify-content: space-between;
+}
+.left-column {
+    max-width: 440px;
+    padding: 30px 30px 30px 0;
+}
+.right-column {
+    max-width: 440px;
+    padding: 30px 0;
+}
+.content img {
+    width: 100%;
+    max-width: 440px;
+}
+.content h2 {
+    font-family: Courier new, sans-serif;
+    font-size: 1.6em;
+    font-weight: bold;
+    padding-bottom: 40px;
+}
+.content p {
+    line-height: 20px;
+    padding-bottom: 15px;
+}
+.content ul {
+    margin-left: 25px;
+}
+.content li {
+    position: relative;
+    padding-bottom: 15px;
+}
+.content li::before {
+    content: "";
+    position: absolute;
+    left: -25px;
+    top: 5px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #feca30;
+}
+
 aside {
     flex: 1 0 auto; /* 1 - это ширина столбца */
     padding: 0 15px;
@@ -246,9 +280,33 @@ aside li {
 /* Подвал сайта */
 footer {
     flex: 0 0 auto;
+    padding: 85px 0 55px 0;
     background-color: #151418;
     color: #fff;
 }
+.copyright {
+    color: #555555;
+    padding-top: 100px;
+}
+footer h3 {
+    margin: 20px 20px 40px 0;
+    padding-bottom: 20px;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 1px solid #888888;
+}
+footer h3 a {
+    color: #888888;
+    text-decoration: none;
+}
+footer li {
+    margin-bottom: 20px;
+}
+footer li a {
+    color: #888888;
+    text-decoration: none;
+}
+/*
 footer > div.container {
     height: 100%;
     padding: 10px 0;
@@ -259,10 +317,4 @@ footer nav ul {
 footer li {
     line-height: 2em;
 }
-
-
-header a,
-footer a {
-    color: #fff;
-    text-decoration: none;
-}
+*/
