--- a/style/space.css
+++ b/style/space.css
@@ -273,7 +273,7 @@ footer h3 {
     padding-bottom: 20px;
     color: #fff;
     text-transform: uppercase;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #888888;
 }
 footer h3 a {
     color: #fff;
