--- a/style/space.css
+++ b/style/space.css
@@ -10,7 +10,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 30%;
     font-size: 12px;
     font-family: Verdana, sans-serif;
 }
@@ -53,7 +53,7 @@ btn {
     padding: 0 25px;
     font-family: Verdana, sans-serif;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 14px;
     line-height: 50px;
     text-decoration: none;
     text-transform: uppercase;
@@ -83,7 +83,8 @@ btn {
     color: #fff;
     background-color: #222;
 }
-.btn-grey::after { background-image: url(hohlova/images/right-arrow-white.png);
+.btn-grey::after {
+    background-image: url(hohlova/images/right-arrow-white.png);
 }
 .btn-grey:hover {
     background-color: #676767;
