--- a/style/space.css
+++ b/style/space.css
@@ -207,11 +207,10 @@ section {
 .advantages .block-item {
     max-width: 200px;
 }
-.advantages .block-item::after {
-    background-image: url(hohlova/images/advantage-icon-1.png);
-}
-.advantages::after {
-    background-image: url(hohlova/images/advantage-icon-1.png);
+.advantages p {
+    font-size: 14px;
+    line-height: 20px;
+    color: #d4d4d4;
 }
 .advantages img {
     padding: 30px 0;
