--- a/style/space.css
+++ b/style/space.css
@@ -237,12 +237,14 @@ section {
 }
 .content h2 {
     font-family: Courier new, sans-serif;
-    font-size: 1.6em;
     font-weight: bold;
     padding-bottom: 40px;
+    font-size: 24px;
+    line-height: 30px;
 }
 .content p {
     line-height: 20px;
+    font-size: 14px;
     padding-bottom: 15px;
 }
 .content ul {
@@ -250,7 +252,8 @@ section {
 }
 .content li {
     position: relative;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
+    font-size: 14px;
 }
 .content li::before {
     content: "";
@@ -274,6 +277,8 @@ footer {
 .copyright {
     color: #555555;
     padding-top: 100px;
+    font-size: 14px;
+    line-height: 20px;
 }
 footer h3 {
     margin: 20px 20px 40px 0;
@@ -285,9 +290,13 @@ footer h3 {
 footer h3 a {
     color: #fff;
     text-decoration: none;
+    font-size: 14px;
+    line-height: 20px;
 }
 footer li {
     margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 20px;
 }
 footer li a {
     color: #888888;
