--- a/style/space.css
+++ b/style/space.css
@@ -147,6 +147,7 @@ header li a {
     display: flex;
     padding-bottom: 20px;
     align-items: center;
+    padding-right: 20px;
 }
 .header-icon img {
     padding-right: 20px;
