--- a/style/space.css
+++ b/style/space.css
@@ -124,6 +124,7 @@ header {
     height: 100%;
     background-color: #222222;
     font-size: 0.9em;
+    padding-right: 20px;
 }
 header > div.container {
     height: 100%; /*было 90*/
