--- a/style/space.css
+++ b/style/space.css
@@ -127,23 +127,24 @@ header {
     padding-right: 20px;
 }
 header > div.container {
-    height: 100%; /*было 90*/
+    height: 100%;
     align-items: flex-end;
 }
 header ul {
     display: flex;
     padding-bottom: 20px;
     font-size: 14px;
+    padding-right: 20px;
 }
 header li {
     color: #d4d4d4;
+    padding-right: 20px;
 }
 header li a {
     padding: 50px 10px 10px 10px;
     margin-right: 10px;
     color: #d4d4d4;
     text-decoration: none;
-    padding-right: 20px;
 }
 .header-icon {
     display: flex;
