--- a/style/space.css
+++ b/style/space.css
@@ -69,7 +69,7 @@ strong {
     top: 17px;
     width: 19px;
     height: 16px;
-    background-image: url(hohlova/images/right-arrow-dark.png);
+    background-image: url(/hohlova/images/right-arrow-dark.png);
     background-repeat: no-repeat;
     background-position: 0 0;
 }
@@ -85,7 +85,7 @@ strong {
     background-color: #222;
 }
 .btn-grey::after {
-    background-image: url(hohlova/images/right-arrow-white.png);
+    background-image: url(/hohlova/images/right-arrow-white.png);
 }
 .btn-grey:hover {
     background-color: #676767;
@@ -111,9 +111,27 @@ strong {
 .col-6 {
     flex: 6;
 }
+@media (max-width: 1024px) {
+    .container {
+        padding: 0 15px;
+    }
+}
 @media (max-width: 800px) {
     .container {
         flex-direction: column;
+    }
+}
+@media (max-width: 800px) {
+    header > div.container,
+    section .container,
+    .content .block,
+    footer .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .moon-rocket {
+        order: -1;
+        width: 300px;
     }
 }
 
@@ -121,18 +139,20 @@ strong {
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
-    height: 100%;
+/*    height: 100%;*/
     background-color: #222222;
     font-size: 0.9em;
     padding-right: 20px;
 }
 header > div.container {
     height: 100%;
-    align-items: flex-end;
+    padding-top: 50px;
+/*    align-items: flex-end;*/
 }
 header ul {
     display: flex;
-    padding-bottom: 20px;
+/*    padding-bottom: 20px;*/
+    padding-top: 50px;
     font-size: 14px;
 }
 header li {
@@ -149,7 +169,8 @@ header a {
 }
 .header-icon {
     display: flex;
-    padding-bottom: 20px;
+/*    padding-bottom: 20px;*/
+    padding-top: 50px;
     align-items: center;
 }
 .header-icon img {
@@ -306,6 +327,14 @@ footer li a {
     color: #888888;
     text-decoration: none;
 }
+/*
 footer span {
     vertical-align: top;
+    font-size: 14px;
+}
+*/
+.footer-logo {
+    display: flex;
+    height: 70px;
+    align-items: center;
 }
