--- a/style/space.css
+++ b/style/space.css
@@ -171,6 +171,9 @@ header li a {
 .header-icon img {
     padding-right: 20px;
 }
+.logo {
+    padding-top: 50px;
+}
 
 
 /* Основное содержимое */
