--- a/style/space.css
+++ b/style/space.css
@@ -10,13 +10,13 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100%; /*+++++++++++++15*/
     font-size: 12px;
     font-family: Verdana, sans-serif;
 }
 .container {
     display: flex;
-    height: 100%;
+    height: 100%; /*++++++++++++++*/
     width: 100%;
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
     margin: 0 auto;
