--- a/style/space.css
+++ b/style/space.css
@@ -145,6 +145,7 @@ header {
     background-color: #222222;
     font-size: 0.9em;
     padding-right: 20px;
+    height: 100%; /*--не должно быть---*/
 }
 header > div.container {
     height: 100%;
@@ -187,6 +188,7 @@ header li a {
 section {
     flex: 3 0 auto; /* 3 - это ширина столбца */
     padding: 0 90px;
+    height: 100%; /*--не должно быть---*/
 }
 .moon {
     flex: 1 0 auto;
