--- a/style/space.css
+++ b/style/space.css
@@ -6,17 +6,17 @@
 /* Базовые стили */
 html {
     height: 100%;
+    background-size: 100%;
 }
 body {
     display: flex;
     flex-direction: column;
-    height: 100%; /*+++++++++++++15*/
+    height: 100%;
     font-size: 12px;
     font-family: Verdana, sans-serif;
 }
 .container {
     display: flex;
-    height: 100%; /*++++++++++++++*/
     width: 100%;
     max-width: 1024px; /*максимальная ширина может иметь другое значение*/
     margin: 0 auto;
@@ -145,7 +145,6 @@ header {
     background-color: #222222;
     font-size: 0.9em;
     padding-right: 20px;
-    height: 100%; /*--не должно быть---*/
 }
 header > div.container {
     height: 100%;
@@ -188,7 +187,6 @@ header li a {
 section {
     flex: 3 0 auto; /* 3 - это ширина столбца */
     padding: 0 90px;
-    height: 100%; /*--не должно быть---*/
 }
 .moon {
     flex: 1 0 auto;
