--- a/style/space.css
+++ b/style/space.css
@@ -6,12 +6,12 @@
 /* Базовые стили */
 html {
     height: 100%;
+    width: 100%;
 }
 body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    background-size: 100%;
     font-size: 12px;
     font-family: Verdana, sans-serif;
 }
@@ -46,7 +46,6 @@ strong {
     display: flex;
     width: 100%;
     margin: 0 auto;
-    background-size: 100%;
 }
 .btn {
     position: relative;
