--- a/style/space.css
+++ b/style/space.css
@@ -212,7 +212,7 @@ section {
     line-height: 22px;
     color: #d4d4d4;
     font-size: 14px;
-    width: 100px;
+    width: 100%;
 }
 .moon img {
     width: 100%;
