--- a/style/space.css
+++ b/style/space.css
@@ -213,13 +213,20 @@ section {
     margin: 30px 0;
 }
 
-flying {
+.flying {
     flex: 1 0 auto;
     flex-wrap: wrap;
     background-color: #222222;
     padding: 30px 0;
 }
-
+table {
+    border-collapse: separate;
+    border: 1px solid black;
+    border-spacing: 5px;
+}
+td {
+    padding: 5px;
+}
 
 .advantages {
     flex: 1 0 auto;
