--- a/style/space.css
+++ b/style/space.css
@@ -218,14 +218,28 @@ section {
     flex-wrap: wrap;
     background-color: #222222;
     padding: 30px 0;
+    padding-bottom: 80px;
 }
 table {
-    border-collapse: separate;
-    border: 1px solid black;
+    margin-left: 100px;
+    border-collapse: collapse;
     border-spacing: 5px;
 }
 td {
-    padding: 5px;
+    padding: 10px;
+    padding-right: 50px;
+    border-bottom: 2px solid #4b4b4b;
+    border-top: 2px solid #4b4b4b;
+    color: #d4d4d4;
+}
+th {
+    font-weight: bold;
+    vertical-align: bottom;
+    text-align: left;
+    color: #fff;
+    background-color: #111111;
+    border: 0px solid #111111;
+    padding: 10px;
 }
 
 .advantages {
