--- a/style/space.css
+++ b/style/space.css
@@ -231,6 +231,14 @@ section {
     line-height: 50px;
     color: #feca30;
 }
+.flying p {
+    margin-bottom: 50px;
+    padding-left: 5px;
+    line-height: 22px;
+    color: #d4d4d4;
+    font-size: 14px;
+    width: 90%;
+}
 table {
     border-collapse: collapse;
     border-spacing: 5px;
