--- a/style/space.css
+++ b/style/space.css
@@ -220,11 +220,11 @@ section {
     padding-left: 150px;
 }
 .flying h2 {
-    margin: 40px 0;
+/*    margin: 40px 0;*/
     font-family: Courier new, monospace;
     font-weight: bold;
     font-size: 30px;
-    line-height: 20px;
+/*    line-height: 20px;*/
     color: #feca30;
 }
 .flying p {
