--- a/style/space.css
+++ b/style/space.css
@@ -254,6 +254,15 @@ th {
     padding-right: 100px;
 }
 
+.shape {
+    flex: 1 0 auto;
+    flex-wrap: wrap;
+    background-color: #222222;
+    padding: 30px 0;
+    padding-bottom: 80px;
+    padding-left: 150px;
+}
+
 .advantages {
     flex: 1 0 auto;
     font-family: monospace;
