--- a/style/space.css
+++ b/style/space.css
@@ -291,9 +291,17 @@ input[type="text"] {
     height: 40px;
     margin-bottom: 5px;
     padding: 10px;
-    border: 0 solid #cccccc;
+    border: 0px;
+    color: #686868;
 }
-
+input[type="tex"] {
+    width: 47%;
+    height: 40px;
+    margin-bottom: 5px;
+    padding: 10px;
+    border: 0px;
+    color: #686868;
+}
 
 .advantages {
     flex: 1 0 auto;
