--- a/style/space.css
+++ b/style/space.css
@@ -282,7 +282,7 @@ th {
 form {
     width: 350px;
     margin-left: auto;
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 input {
     font-family: "Roboto", sans-serif;
@@ -304,8 +304,9 @@ input[type="txt"] {
     color: #686868;
 }
 input[type="checkbox"] {
-    vertical-align: bottom;
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-left: 5px;
+    transform: scale(1.5);
 }
 
 .advantages {
